# forgecode

./: Cargo.toml  README.md  forge.schema.json  package-lock.json  package.json
.forge/skills/test-mcp-permissions/scripts/: test.py
.github/workflows/: autofix.yml  bounty.yml  ci.yml  labels.yml  release.yml
crates/forge_api/src/: api.rs  forge_api.rs
crates/forge_app/src/: lib.rs  operation.rs  services.rs  utils.rs
crates/forge_app/src/dto/anthropic/: response.rs
crates/forge_app/src/dto/openai/: copilot_model.rs  mod.rs  model.rs
crates/forge_app/src/dto/openai/fixtures/: orcarouter_api_response.json
crates/forge_app/src/dto/openai/transformers/: ensure_system_first.rs  minimax.rs  pipeline.rs
crates/forge_app/src/orch_spec/: orch_spec.rs
crates/forge_config/: .forge.toml  Cargo.toml
crates/forge_config/src/: config.rs
crates/forge_display/src/: markdown.rs
crates/forge_domain/src/: error.rs  mcp.rs  mcp_servers.rs  model.rs  provider.rs  result_stream_ext.rs
crates/forge_domain/src/auth/: new_types.rs
crates/forge_domain/src/policies/: config.rs  engine.rs  operation.rs  policy.rs  rule.rs  types.rs
crates/forge_domain/src/tools/descriptions/: shell.md
crates/forge_fs/: Cargo.toml
crates/forge_infra/: Cargo.toml
crates/forge_infra/src/: http.rs  kv_storage.rs  mcp_client.rs
crates/forge_main/: Cargo.toml
crates/forge_main/src/: cli.rs  conversation_selector.rs  editor.rs  highlighter.rs  info.rs  lib.rs  main.rs  policy_notice.rs  prompt.rs  ui.rs  vscode.rs
crates/forge_main/src/completer/: command.rs  input_completer.rs  mod.rs  search_term.rs
crates/forge_main/src/zsh/: plugin.rs
crates/forge_markdown_stream/src/: repair.rs
crates/forge_repo/src/: context_engine.rs  forge_repo.rs
crates/forge_repo/src/database/: pool.rs
crates/forge_repo/src/provider/: bedrock.rs  openai.rs  provider.json  provider_repo.rs
crates/forge_repo/src/provider/openai_responses/: codex_transformer.rs  repository.rs  request.rs
crates/forge_repo/src/provider/openai_responses/snapshots/: forge_repo__provider__openai_responses__request__tests__openai_responses_all_catalog_tools.snap
crates/forge_select/: Cargo.toml
crates/forge_select/src/: lib.rs  multi.rs  preview.rs  select.rs  widget.rs
crates/forge_services/src/: permissions.default.yaml  policy.rs  provider_service.rs
crates/forge_services/src/mcp/: service.rs
crates/forge_services/src/tool_services/: fs_patch.rs
crates/forge_spinner/src/: lib.rs
crates/forge_tracker/: Cargo.toml
crates/forge_tracker/src/collect/: posthog.rs
shell-plugin/: README.md  doctor.zsh
shell-plugin/lib/: bindings.zsh  completion.zsh  config.zsh  helpers.zsh
shell-plugin/lib/actions/: auth.zsh  config.zsh  conversation.zsh  provider.zsh
templates/: forge-doom-loop-reminder.md
