[package]
name = "forge_infra"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
forge_snaps.workspace = true
forge_fs.workspace = true
anyhow.workspace = true
async-trait.workspace = true
dirs.workspace = true
dotenvy.workspace = true
forge_config.workspace = true
forge_domain.workspace = true
forge_services.workspace = true
tokio.workspace = true
serde_json.workspace = true
reqwest.workspace = true

bstr.workspace = true
bytes.workspace = true
pretty_assertions.workspace = true
forge_select.workspace = true
tempfile.workspace = true
rmcp.workspace = true
tracing.workspace = true
backon.workspace = true
thiserror.workspace = true
schemars.workspace = true
forge_app.workspace = true
forge_walker.workspace = true


forge_eventsource.workspace = true
glob.workspace = true
futures.workspace = true
diesel = { version= "2.3.7", features = ["sqlite", "r2d2", "chrono"] }
libsqlite3-sys = { version = "0.38.0", features = ["bundled"] }
diesel_migrations = "2.2.0"
chrono = { version = "0.4", features = ["serde"] }
cacache = { version = "13.1.0", features = ["tokio-runtime"], default-features = false }
serde.workspace = true
oauth2 = { version = "5.0", features = ["reqwest"] }
serde_urlencoded = "0.7.1"
base64.workspace = true
http.workspace = true
url.workspace = true
tonic.workspace = true
google-cloud-auth.workspace = true
open.workspace = true
aws-config.workspace = true
aws-credential-types.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
serial_test = "3.4"
fake = { version = "5.1.0", features = ["derive"] }
pretty_assertions.workspace = true
forge_domain = { path = "../forge_domain" }
