[package]
name = "forge_main"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"


[dependencies]
thiserror = { workspace = true }
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
forge_app.workspace = true
forge_api.workspace = true
forge_domain.workspace = true
forge_config.workspace = true
forge_walker.workspace = true
forge_display.workspace = true
forge_tracker.workspace = true
bstr.workspace = true

forge_spinner.workspace = true
forge_select.workspace = true

merge.workspace = true
nucleo.workspace = true
nucleo-picker.workspace = true
libc = "0.2"
forge_fs.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
colored.workspace = true

anyhow.workspace = true
derive_setters.workspace = true
lazy_static.workspace = true
reedline.workspace = true
crossterm = "0.29.0"
nu-ansi-term.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
regex.workspace = true
strum.workspace = true
strum_macros.workspace = true

convert_case.workspace = true
gix.workspace = true
update-informer = { version = "1.2.0", default-features = false, features = [
    "github",
    "ureq",
    "rustls-tls",
] }
dirs.workspace = true
open.workspace = true
humantime.workspace = true
num-format.workspace = true
url.workspace = true
forge_embed.workspace = true
include_dir.workspace = true
indexmap.workspace = true
async-recursion.workspace = true

forge_markdown_stream.workspace = true
strip-ansi-escapes.workspace = true
terminal_size = "0.4"
rustls.workspace = true
tempfile.workspace = true
tiny_http.workspace = true

[target.'cfg(windows)'.dependencies]
enable-ansi-support.workspace = true
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
insta.workspace = true
pretty_assertions.workspace = true
serial_test = "3.4"
fake = { version = "5.1.0", features = ["derive"] }
forge_domain = { path = "../forge_domain" }
