[package]
name = "forge_select"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
bstr.workspace = true
colored.workspace = true
console.workspace = true
crossterm = "0.29.0"
derive_setters.workspace = true
nucleo.workspace = true
nucleo-picker.workspace = true
rustyline.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
