[package]
name = "forge_tracker"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
reqwest.workspace = true
derive_more.workspace = true
url.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
sysinfo.workspace = true
posthog-rs = "0.7.0"
async-trait.workspace = true
chrono.workspace = true
whoami.workspace = true
convert_case.workspace = true
http.workspace = true
regex.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
bstr.workspace = true
forge_domain.workspace = true
lazy_static.workspace = true
dirs.workspace = true

# Platform-specific dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
machineid-rs.workspace = true

[target.'cfg(target_os = "android")'.dependencies]
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
lazy_static.workspace = true
pretty_assertions.workspace = true
